Dynamic menu, css fixes for triple scrollbar on MS

--- a/private/assets/sass/main.scss
+++ b/private/assets/sass/main.scss
@@ -44,20 +44,14 @@ hr
 	transform: translateZ(0);
 	width: 100% - 2*$min-page-padding;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
-}
-%abs-col {
-	position: absolute;
-	top: 0;
-	min-height: 100%;
-	width: 100% - 2*$min-page-padding;
 }
 .is-columned {
 	column-count: 2;
 	column-gap: $default-gutter-width;
 }
-.wrapper,
-.content-menu {
+.wrapper {
 	@include rem(padding, $spacing);
 
 	&.wrapper--intro {
@@ -99,84 +93,89 @@ hr
 		@include goldencol('large');
 	}
 }
-	.sidebar__logo-wrapper {
-		position: relative;
+	.sidebar__wrapper,
+	.content-menu__wrapper {
+		width: calc(100% + 40px);
+		@include rem(padding-right, $spacing + 40px);
 	}
-		.sidebar__logo,
-		.sidebar__version {
-			vertical-align: top;
+		.sidebar__logo-wrapper {
+			position: relative;
 		}
-		.sidebar__logo {
-			display: inline-block;
-			width: 38px;
-			height: 33px;
-			@include rem(margin-right, $spacing/2);
-			@include rem(margin-bottom, $spacing);
-			background: url(../images/headstart-logo-graphic.png) no-repeat left top;
-			text-decoration: none;
+			.sidebar__logo,
+			.sidebar__version {
+				vertical-align: top;
+			}
+			.sidebar__logo {
+				display: inline-block;
+				width: 38px;
+				height: 33px;
+				@include rem(margin-right, $spacing/2);
+				@include rem(margin-bottom, $spacing);
+				background: url(../images/headstart-logo-graphic.png) no-repeat left top;
+				text-decoration: none;
 
-			@include highres() {
-				background-image: url(../images/headstart-logo-graphic@2x.png);
-				background-size: 38px 33px;
+				@include highres() {
+					background-image: url(../images/headstart-logo-graphic@2x.png);
+					background-size: 38px 33px;
+				}
 			}
-		}
-		.sidebar__version {
-			font-size: em(12);
-			line-height: 1;
-			text-decoration: none;
-			@extend %is-bold;
-
-			&, &:visited {
-				color: $dark-teal;
-			}
-			&:hover {
-				color: $white;
-			}
-		}
-	.sidebar__menu {
-		&, & ul {
-			margin: 0;
-			padding: 0;
-		}
-		li {
-			list-style-type: none;
-			padding: 0;
-
-			&:before {
-				display: none;
-			}
-		}
-		a {
-			display: block;
-			text-decoration: none;
-			line-height: 1;
-			
-			&, &:visited {
-				color: $white;
-			}
-			&.is-active {
-				color: $teal;
-			}
-			&:hover, &.is-active {
-				text-decoration: underline;
-			}
-		}
-		& > ul > li {
-			& > a {
+			.sidebar__version {
+				font-size: em(12);
+				line-height: 1;
+				text-decoration: none;
 				@extend %is-bold;
-				@include rem(padding, $spacing/3, 0);
-			}
-		}
-		ul ul {
-			@include rem(margin-left, $spacing/2);
-			@include rem(margin-bottom, $spacing/3);
 
+				&, &:visited {
+					color: $dark-teal;
+				}
+				&:hover {
+					color: $white;
+				}
+			}
+		.sidebar__menu {
+			&, & ul {
+				margin: 0;
+				padding: 0;
+			}
+			li {
+				list-style-type: none;
+				padding: 0;
+
+				&:before {
+					display: none;
+				}
+			}
 			a {
-				@include rem(padding, $spacing/6, 0);
-				font-size: em(15);
+				display: block;
+				text-decoration: none;
+				line-height: 1;
+				
+				&, &:visited {
+					color: $white;
+				}
+				&.is-active {
+					color: $teal;
+				}
+				&:hover, &.is-active {
+					text-decoration: underline;
+				}
+			}
+			& > ul > li {
+				& > a {
+					@extend %is-bold;
+					@include rem(padding, $spacing/3, 0);
+				}
+			}
+			ul ul {
+				@include rem(margin-left, $spacing/2);
+				@include rem(margin-bottom, $spacing/3);
+
+				a {
+					@include rem(padding, $spacing/6, 0);
+					font-size: em(15);
+				}
 			}
 		}
-	}
 .content-menu {
 	background: $light-blue;
 	@extend %fixed-col;
@@ -208,6 +207,11 @@ hr
 			@include rem(top, -4);
 		}
 	}
+	@include media-min-max(880, 999) {
+		&.is-empty {
+			display: none;
+		}
+	}
 	@include media-min-max(501, 879) {
 		text-align: right;
 	}
@@ -236,7 +240,7 @@ hr
 			@include rem(left, $spacing);
 		}
 	}
-	.content-menu-wrapper {
+	.content-menu-item-wrapper {
 		text-align: left;
 		@include media-max(879) {
 			@include rem(margin-top, 2*$spacing);
@@ -254,10 +258,16 @@ hr
 			margin: 0;
 		}
 	}
+	.is-empty .content-menu-item-wrapper {
+		@include rem(margin-top, $spacing);
+	}
 .content {
-	@extend %abs-col;
+	/* position: absolute;
+	top: 0;
 	left: 0;
-	right: 0;
+	right: 0; */
+	min-height: 100%;
+	width: 100% - 2*$min-page-padding;
 	background: $white;
 	
 	@include media-min(1500) {
@@ -274,13 +284,13 @@ hr
 	// 	}
 	// }
 	@include media-min(1000) {
-		@include goldencol('large');
+		@include goldencol('large', false, true, width);
 	}
 	@include media-max(999) {
 		width: auto;
 	}
 	@include media-min(880) {
-		@include goldencol('large', true, true);
+		@include goldencol('large', true, true, margin-left);
 		@include rem(margin-bottom, 80);
 	}
 }
