--- a/private/assets/sass/mixin/_grid.scss
+++ b/private/assets/sass/mixin/_grid.scss
@@ -29,20 +29,20 @@
 	}
 }
 
-@mixin goldencol ($size, $isSub: false, $isOffset: false) {
+@mixin goldencol ($size, $isSub: false, $isOffset: false, $prop: left) {
 
 	$gr: 1.61803398874989484820;
 
 	@if $size == 'small' {
 		@if $isSub {
 			@if $isOffset {
-				left: (1 - 1/$gr) - (1 - 1/$gr)/$gr * 100 * 1%;
+				#{$prop}: (1 - 1/$gr) - (1 - 1/$gr)/$gr * 100 * 1%;
 			} @else {
 				max-width: (1 - 1/$gr) * (1/$gr) * (1/$gr) * 100 * 1%;
 			}
 		} @else {
 			@if $isOffset {
-				left: (1 - 1/$gr) * 100 * 1%;
+				#{$prop}: (1 - 1/$gr) * 100 * 1%;
 			} @else {
 				max-width: (1 - 1/$gr) * 100 * 1%;
 			}
@@ -50,18 +50,18 @@
 	} @elseif $size == 'large' {
 		@if $isSub {
 			@if $isOffset {
-				left: (1 - 1/$gr)/$gr * 100 * 1%;
+				#{$prop}: (1 - 1/$gr)/$gr * 100 * 1%;
 			} @else {
 				max-width: (1 - 1/$gr)/$gr * 100 * 1%;
 			}
 		} @else {
 			@if $isOffset {
-				left: (1/$gr) * 100 * 1%;
+				#{$prop}: (1/$gr) * 100 * 1%;
 			} @else {
 				max-width: (1/$gr) * 100 * 1%;
 			}
 		}
 	} @else {
-		@warn 'Assuming $size to be either "small" or "large"';
+		@warn 'goldencol() attribute `$size` should be either "small" or "large"';
 	}
 }
